--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "3.x",
     "express-partials": "latest",
+    "method-override": "^3.0.0",
     "mongoose": "3.5.6"
   },
   "engines": {
