--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
+    "error-handler": "^1.0.0",
     "express": "3.x",
     "express-partials": "latest",
     "method-override": "^3.0.0",
