--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "error-handler": "^1.0.0",
     "express": "3.x",
     "express-partials": "latest",
+    "logger": "^0.0.1",
     "method-override": "^3.0.0",
     "mongoose": "3.5.6"
   },
